nginx-gunicorn-django-postgresql/nginx-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngdp-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ngdp-pods-label
  template:
    metadata:
      labels:
        app: ngdp-pods-label
    spec:
      containers:
        - name: nginx-ngdp
          # image: ajmalkhanbangash/afd-app:0.1
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: ngdp-pv-volume
            - mountPath: "/etc/nginx/conf.d"
              name: ngdp-pv-volume02
      volumes:
        - name: ngdp-pv-volume
          persistentVolumeClaim:
            claimName: nginx-pvc
        - name: ngdp-pv-volume02
          persistentVolumeClaim:
            claimName: ngdp-pvc
